manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: taskapp
  labels:
    app: taskapp
    environment: production
